--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -44,6 +44,7 @@
         font-size: 1rem;
         color: rgb(119, 119, 119);
         font-weight: 400;
+        text-align: justify;
 
         .description {
             line-height: 2;
