--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -20,15 +20,15 @@
 
     .menuItem {
         width: max-content;
-        font-size: 1.5rem;
-        font-weight: 600;
+        font-size: 1.3rem;
+        font-weight: 700;
         cursor: pointer;
         gap:5px;
         text-transform: uppercase;
         /* flex-grow: 1; */
         text-wrap: nowrap;
-        margin-left: 3px;
-        margin-right: 3px;
+        /* margin-left: 3px; */
+        /* margin-right: 3px; */
         align-items: center;
         justify-content: center;
     }
